Fixing background overflow glitch

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,17 +2,16 @@ html {
     height: 100%;
     background: url('assets/nuvem.png');
     background-size: cover;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 body {
-    background: none !important;
     height: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 app-root {
-    height: 100%;
+    min-height: 100%;
     display: block;
     .container-fluid {
         padding-left: 0;
